[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/overlays/debug_log/debug_log.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://ui/gui/font/Photosynthesis.ttf"

[sub_resource type="DynamicFont" id=2]
size = 4
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
font_data = SubResource( 1 )

[node name="debug_log" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="main_container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="h_box_container" type="HBoxContainer" parent="main_container"]
margin_right = 12.0
margin_bottom = 135.0
mouse_filter = 2

[node name="v_box_container" type="VBoxContainer" parent="main_container/h_box_container"]
margin_bottom = 135.0
mouse_filter = 2

[node name="log" type="Label" parent="main_container/h_box_container/v_box_container"]
margin_bottom = 7.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 1
custom_fonts/font = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="main_container/h_box_container/v_box_container/log"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.247059, 0.247059, 0.247059, 0.498039 )
